# fold.ly

./: .gitignore  README.md  docker-compose.yml  run_ios.sh
url-shortener-back/: .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
url-shortener-back/alembic/: env.py
url-shortener-back/alembic/versions/: 072ccbcc7bd4_remove_ip_address_in_user.py  11525e42c26d_initialize_app_db_schema.py  21230a42a59a_initialize_database_schema.py  e5b29a3644a1_add_analytics_tbl.py
url-shortener-back/api/: core.py  data.py  subscription.py  user.py
url-shortener-back/api/entities/: access_token.py  data.py  login.py  shortener.py  subscription.py  user.py
url-shortener-back/api/utils/: auth.py  keystore.py
url-shortener-back/db/: db_session.py
url-shortener-back/db/models/: core.py
url-shortener-back/db/models/enum/: subscription.py
url-shortener-back/db/models/mixin/: timestamp.py
url-shortener-back/db/seed/: begin_seed.py
url-shortener-back/db/seed/raw/: subscriptions.json  users.json
url-shortener-back/tests/: conftest.py  test_core.py  test_data.py  test_health.py  test_user.py
url-shortener-back/utils/: password.py
url-shortener-front/: .env.example  Dockerfile  next.config.mjs  oxlint.config.ts  package.json
url-shortener-front/.storybook/: main.ts  preview.tsx
url-shortener-front/app/: layout.tsx  page.tsx
url-shortener-front/src/: theme.ts
url-shortener-front/storybook-static/: 0.a1b89264.iframe.bundle.js  0.a1b89264.iframe.bundle.js.map  31.1dd9caea.iframe.bundle.js  31.1dd9caea.iframe.bundle.js.map  (+54 more)
(+61 files in other folders)
